--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="pro-card">
                     <img src="./src/3.png" alt="gemu" class="pro-img">
                     <div class="pro-right">
-                        <h2>Gemu.co.in</h2>
+                        <h2>Gemu.co.io</h2>
                         <p>Gemu.co.io is a personal and creative gaming website built by Himanshu Pal, showcasing a growing collection of interactive mini-games made entirely with HTML, CSS, and JavaScript. It's designed to be a fun, inspiring, and ever-expanding project to improve frontend skills and entertain users at the same time.</p>
                         <div class="pro-btn">
                             <a class="live-btn" href="https://himanshu-97-cloud.github.io/Gemu.co.io/" target="_blank">Live Preview</a>
@@ -243,4 +243,5 @@
     </script>
 
 </body>
+
 </html>
